src/SEstruch/WebsiteBundle/Resources/public/css/10-style.css
#container {
    margin: 0 auto;
    width: 990px;
}

header {
    border-bottom: 1px solid #F3F3F3;
    margin: 20px 0 0;
}

#langs {
    width: 990px;
    height: 10px;
}

#langs li {
    float: right;
    margin-left: 5px;
}

#menu {
    height: 40px;
    border-bottom: 1px solid #F3F3F3;
    margin-bottom: 5px;
}

#menu li {
    float: left;
    margin-right: 4px;
}

#langs li a, #menu li a {
    font-size: 11px;
    color: #4a4e53;
    font-weight: bold;
    text-transform: uppercase;
    text-decoration: none;
    line-height: 11px;
    padding: 1px 2px;
}

#menu li a:hover {
    background-color: #FFD101;
}

#langs li a:hover {
    text-decoration: underline;
}

#logo {
    height: 50px;
}

#logo a {
    float: left;
    margin-right: 20px;
}

h1 {
    float: left;
    font-size: 10px;
    color: #B2B2B2;
    line-height: 11px;
    position: relative;
    font-weight: normal;
    top: 8px;
}

h1 span {
    display: block;
}

footer {
    font-size: 11px;
    text-align: center;
    color: #acacac;
    border-top: 1px solid #F3F3F3;
    padding: 10px 0;
    margin-top: 10px;
    width: 990px;
}

section {
    width: 990px;
}

.clearfix {
    zoom: 1;
}

.clearfix:after {
    display: block;
    visibility: hidden;
    height: 0;
    clear: both;
    content: ".";
}

.opacity90 {
    filter: alpha(opacity = 90);
    opacity: 0.9;
}

section.contacto {
    background-image: url('/images/cuadro.jpg');
    width: 1000px;
    height: 500px;
}

#contact_form {
    float: left;
    margin: 60px 30px 30px 100px;
    padding: 20px;
    background-color: white;
    width: 400px;
}

#contact_info {
    float: left;
    background-color: white;
    width: 250px;
    margin: 60px 30px 30px;
    padding: 20px;
    font-size: 12px;
    color: #6c6c6c;
}

#frm_contacto ul {
    padding: 0;
}

#frm_contacto li {
    list-style: none;
    margin: 5px;
    padding: 2px;
}

#frm_contacto li.submit {
    text-align: center;
}

#frm_contacto label {
    width: 110px;
    text-align: right;
    float: left;
    font-size: 12px;
    color: #6c6c6c;
    padding: 3px;
    margin-right: 10px;
}

#frm_contacto input, #frm_contacto textarea {
    float: left;
    font-size: 12px;
    color: #6c6c6c;
    border: 1px solid #6c6c6c;
    width: 240px;
}

#frm_contacto input[type=submit] {
    width: auto;
    float: none;
}

ul#obras {
    padding: 0;
}

#obras li {
    margin: 0 10px 10px 0;
    float: left;
    border: 1px solid #EDEDED;
    padding: 10px;
    overflow: hidden;
    background-color: #f2f2f2;
    box-shadow: 2px 2px 11px #DCDDDE;
    -moz-box-shadow: 2px 2px 11px #DCDDDE;
    -webkit-box-shadow: 2px 2px 11px #DCDDDE;
}

span.contenedor {
    position: relative;
    height: 140px;
    overflow: hidden;
    float:left;
}

span.text_hidden {
    position: absolute;
    left: 0;
    top: 140px;
    padding-left: 10px;
    height: 30px;
    padding-top: 10px;
    filter: alpha(opacity = 80);
    opacity: 0.8;
    background-color: white;
    width: 100%;
    font-size: 12px;
}

